# -*- coding: utf-8 -*-
"""
Created on Fri Mar  4 12:40:09 2022

@author: lahat
"""

[metadata]
name = backup
version = 1.0.0
author = Albert
author_email = lahat.albert@gmail.com
description = Backup to store results of functions, so they do not need to be rerun
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aLahat/bakup
project_urls =
    Bug Tracker = https://github.com/aLahat/bakup/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src